[package]
name = "win-beep"
description = "Calls the `Beep()` function of the Windows API."
version = "1.0.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
windows-sys = { version = "0.42.0", features = ["Win32_Foundation", "Win32_System_Diagnostics_Debug"] }

[dev-dependencies]
windows-sys = { version = "0.42.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
