[package]
name = "win-beep"
version = "1.0.3"
description = "Calls the `Beep()` function of the Windows API."
categories = ["development-tools::debugging", "multimedia::audio", "os::windows-apis"]
repository = "https://github.com/Enyium/win-beep-rs"
documentation = "https://docs.rs/win-beep"
license = "MIT OR Apache-2.0"
edition = "2021"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]

[dependencies]
windows-sys = { version = "0.42.0", features = ["Win32_Foundation", "Win32_System_Diagnostics_Debug"] }

[dev-dependencies]
windows-sys = { version = "0.42.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
